color replenish-me pills yellow if >2 weeks left

--- a/templates/main.html
+++ b/templates/main.html
@@ -4,12 +4,14 @@
 <meta charset="utf-8" />
 <title>Pill Reserves</title>
 <style type="text/css">
+/* <![CDATA[ */
 body { font-family: sans-serif; }
 table, th, td { border: 1px solid #ccc; }
 th, td { padding: 0.2em 0.4em; vertical-align: top; }
 td.count { text-align: right; }
 td.components ul { margin-top: 0; margin-bottom: 0; padding-inline-start: 15px; }
-td.remaining.replenish-me { background-color: #fcc; }
+td.remaining.replenish-now { background-color: #fcc; }
+td.remaining.replenish-soon { background-color: #ffc; }
 form.replenish input[name=amount] { width: 3em; }
 @media (color) {
     th { background-color: #603; color: #fff; }
@@ -21,10 +23,12 @@ form.replenish input[name=amount] { width: 3em; }
 @media screen and (prefers-color-scheme: dark) {
     body { background-color: black; color: #ccc; }
     table, th, td { border: 1px solid #333; }
-    td.remaining.replenish-me { background-color: #400; }
+    td.remaining.replenish-now { background-color: #400; }
+    td.remaining.replenish-soon { background-color: #440; }
     input[type=number] { background-color: black; color: #ccc; }
     input[type=submit] { background-color: #555; color: #ccc; }
 }
+/* ]]> */
 </style>
 </head>
 <body>
@@ -86,7 +90,7 @@ form.replenish input[name=amount] { width: 3em; }
         {% else if column == "description" -%}
             <td class="description">{{ dtd.drug.description()|escape|br }}</td>
         {% else if column == "remaining" -%}
-            <td class="remaining{% if dtd.needs_replenishment(min_weeks_per_prescription) %} replenish-me{% endif %}">
+            <td class="remaining {{ dtd.needs_replenishment(min_weeks_per_prescription).css_classes() }}">
                 <span class="total">{{ dtd.drug.remaining()|frac2float }}</span>
                 {% if let Some(remaining_weeks) = dtd.remaining_weeks %}
                     (<span class="weeks">{{ remaining_weeks }}</span>)
